// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VueVirtualDocument/baseline feature-goto-definition/src/Javascript.vue 1`] = `
import _Ctx from './Javascript.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


export function render({decrease, one, increase, two, name, email, code}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane"/><p><button onClick={decrease}>-</button> {one} <button onClick={increase}>+</button> and double is {two}</p><p>Name: {name} Email: {email} Code: {code}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-goto-definition/src/JavascriptSetup.vue 1`] = `
import _Ctx from './JavascriptSetup.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


export function render({decrease, one, increase, two, name, email, code}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane"/><p><button onClick={decrease}>-</button> {one} <button onClick={increase}>+</button> and double is {two}</p><p>Name: {name} Email: {email} Code: {code}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-goto-definition/src/Typescript.vue 1`] = `
import _Ctx from './Typescript.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


export function render({decrease, one, increase, two, name, email, code}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane"/><p><button onClick={decrease}>-</button> {one} <button onClick={increase}>+</button> and double is {two}</p><p>Name: {name} Email: {email} Code: {code}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-goto-definition/src/TypescriptSetup.vue 1`] = `
import _Ctx from './TypescriptSetup.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


export function render({decrease, one, increase, two, name, email, code}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane"/><p><button onClick={decrease}>-</button> {one} <button onClick={increase}>+</button> and double is {two}</p><p>Name: {name} Email: {email} Code: {code}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-goto-definition/src/components/HelloWorld.vue 1`] = `
import _Ctx from './HelloWorld.vue?internal'


export function render({name}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<p>Hello {name}!</p>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-quickinfo/src/Javascript.vue 1`] = `
import _Ctx from './Javascript.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


export function render({name, email, code, fullname, altCode}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane"/><p><span>Name: {name}</span><span>Email: {email}</span><span>Code: {code}</span></p><p><span>FullName: {fullname}</span><span>AltCode: {altCode}</span></p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-quickinfo/src/JavascriptSetup.vue 1`] = `
import _Ctx from './JavascriptSetup.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


export function render({name, email, code, fullname, altCode}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane"/><p><span>Name: {name}</span><span>Email: {email}</span><span>Code: {code}</span></p><p><span>FullName: {fullname}</span><span>AltCode: {altCode}</span></p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-quickinfo/src/Typescript.vue 1`] = `
import _Ctx from './Typescript.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


export function render({name, email, code, fullname, altCode}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane"/><p><span>Name: {name}</span><span>Email: {email}</span><span>Code: {code}</span></p><p><span>FullName: {fullname}</span><span>AltCode: {altCode}</span></p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-quickinfo/src/TypescriptSetup.vue 1`] = `
import _Ctx from './TypescriptSetup.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


export function render({name, email, code, fullname, altCode}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane"/><p><span>Name: {name}</span><span>Email: {email}</span><span>Code: {code}</span></p><p><span>FullName: {fullname}</span><span>AltCode: {altCode}</span></p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-quickinfo/src/components/HelloWorld.vue 1`] = `
import _Ctx from './HelloWorld.vue?internal'


export function render({name}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<p>Hello {name}!</p>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-rename/src/Javascript.vue 1`] = `
import _Ctx from './Javascript.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


export function render({decrease, one, increase, two, name, email, code}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane"/><p><button onClick={decrease}>-</button> {one} <button onClick={increase}>+</button> and double is {two}</p><p>Name: {name} Email: {email} Code: {code}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-rename/src/JavascriptSetup.vue 1`] = `
import _Ctx from './JavascriptSetup.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


export function render({decrease, one, increase, two, name, email, code}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane"/><p><button onClick={decrease}>-</button> {one} <button onClick={increase}>+</button> and double is {two}</p><p>Name: {name} Email: {email} Code: {code}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-rename/src/Typescript.vue 1`] = `
import _Ctx from './Typescript.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


export function render({decrease, one, increase, two, name, email, code}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane"/><p><button onClick={decrease}>-</button> {one} <button onClick={increase}>+</button> and double is {two}</p><p>Name: {name} Email: {email} Code: {code}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-rename/src/TypescriptSetup.vue 1`] = `
import _Ctx from './TypescriptSetup.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


export function render({decrease, one, increase, two, name, email, code}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><HelloWorld name="Jane"/><p><button onClick={decrease}>-</button> {one} <button onClick={increase}>+</button> and double is {two}</p><p>Name: {name} Email: {email} Code: {code}</p></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline feature-rename/src/components/HelloWorld.vue 1`] = `
import _Ctx from './HelloWorld.vue?internal'


export function render({name}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<p>Hello {name}!</p>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline javascript/src/App.vue 1`] = `
import _Ctx from './App.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<main><h1>A sample vue application</h1><HelloWorld name="Rahul"/></main>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline javascript/src/components/FeaturePropType.vue 1`] = `
import _Ctx from './FeaturePropType.vue?internal'
import PropTypeObject from './FixturePropTypeObject.vue'


export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><PropTypeObject/><PropTypeObject eventA={{ id: 1 }}/><PropTypeObject eventA={{ id: 'foo' }}/><PropTypeObject eventA={{ id: 1, foo: 'bar' }}/><PropTypeObject eventA={{ id: 1, foo: 'bar' }} eventB={{ id: 1, foo: 'bar' }}/></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline javascript/src/components/FixturePropTypeObject.vue 1`] = `
import _Ctx from './FixturePropTypeObject.vue?internal'


export function render({event}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<>" Event: "{event.id}</>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline javascript/src/components/HelloWorld.vue 1`] = `
import _Ctx from './HelloWorld.vue?internal'


export function render({name}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<p>Hello {name}!</p>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline javascript-with-config/src/App.vue 1`] = `
import _Ctx from './App.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<main><h1>A sample vue application</h1><HelloWorld name="Rahul"/></main>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline javascript-with-config/src/components/FeaturePropType.vue 1`] = `
import _Ctx from './FeaturePropType.vue?internal'
import PropTypeObject from './FixturePropTypeObject.vue'


export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><PropTypeObject/><PropTypeObject eventA={{ id: 1 }}/><PropTypeObject eventA={{ id: 'foo' }}/><PropTypeObject eventA={{ id: 1, foo: 'bar' }}/><PropTypeObject eventA={{ id: 1, foo: 'bar' }} eventB={{ id: 1, foo: 'bar' }}/></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline javascript-with-config/src/components/FixturePropTypeObject.vue 1`] = `
import _Ctx from './FixturePropTypeObject.vue?internal'


export function render({event}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<>" Event: "{event.id}</>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline javascript-with-config/src/components/HelloWorld.vue 1`] = `
import _Ctx from './HelloWorld.vue?internal'


export function render({name}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<p>Hello {name}!</p>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline typescript/src/App.vue 1`] = `
import _Ctx from './App.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<main><h1>A sample vue application</h1><HelloWorld name="Rahul"/></main>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline typescript/src/components/FeaturePropType.vue 1`] = `
import _Ctx from './FeaturePropType.vue?internal'
import PropTypeObject from './FixturePropTypeObject.vue'


export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><PropTypeObject/><PropTypeObject eventA={{ id: 1 }}/><PropTypeObject eventA={{ id: 'foo' }}/><PropTypeObject eventA={{ id: 1, foo: 'bar' }}/><PropTypeObject eventA={{ id: 1, foo: 'bar' }} eventB={{ id: 1, foo: 'bar' }}/></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline typescript/src/components/FixturePropTypeObject.vue 1`] = `
import _Ctx from './FixturePropTypeObject.vue?internal'


export function render({event}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<>" Event: "{event.id}</>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline typescript/src/components/HelloWorld.vue 1`] = `
import _Ctx from './HelloWorld.vue?internal'


export function render({name}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<p>Hello {name}!</p>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline typescript-with-config/src/App.vue 1`] = `
import _Ctx from './App.vue?internal'
import HelloWorld from './components/HelloWorld.vue'


export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<main><h1>A sample vue application</h1><HelloWorld name="Rahul"/></main>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline typescript-with-config/src/components/FeaturePropType.vue 1`] = `
import _Ctx from './FeaturePropType.vue?internal'
import PropTypeObject from './FixturePropTypeObject.vue'


export function render(_ctx: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<><PropTypeObject/><PropTypeObject eventA={{ id: 1 }}/><PropTypeObject eventA={{ id: 'foo' }}/><PropTypeObject eventA={{ id: 1, foo: 'bar' }}/><PropTypeObject eventA={{ id: 1, foo: 'bar' }} eventB={{ id: 1, foo: 'bar' }}/></>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline typescript-with-config/src/components/FixturePropTypeObject.vue 1`] = `
import _Ctx from './FixturePropTypeObject.vue?internal'


export function render({event}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<>" Event: "{event.id}</>/*@@vue:end*/
}
`;

exports[`VueVirtualDocument/baseline typescript-with-config/src/components/HelloWorld.vue 1`] = `
import _Ctx from './HelloWorld.vue?internal'


export function render({name}: InstanceType<typeof _Ctx>) {
  return /*@@vue:start*/<p>Hello {name}!</p>/*@@vue:end*/
}
`;
